--- a/jhuan-portifolio/package.json
+++ b/jhuan-portifolio/package.json
@@ -15,7 +15,8 @@
     "bootstrap": "^5.2.3",
     "google-fonts": "^1.0.0",
     "react-bootstrap": "^2.7.4",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
